--- a/sdlcodes/sumit.html
+++ b/sdlcodes/sumit.html
@@ -105,7 +105,7 @@
             const email = document.getElementById('email').value.trim();
             const emailRegex = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{3,}$/;
             if (email === '' || !emailRegex.test(email)) {
-                document.getElementById('lastNameError').style.display = 'block';
+                document.getElementById('emailError').style.display = 'block';
                 isValid = false;
             }
 
